fix the spacing and scrolling issues related to global alerts

--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -201,6 +201,7 @@
     height: 95vh;
     .modal-header {
       padding: 0;
+      padding-top: 20px;
       // we don't want it to be flex, since we're doing flex ourselves
       display: block;
     }
